# Main_tasks

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Curves.h  README.md  main.cpp  test_tasks.cpp
optional tasks/: CMakeLists.txt  main.cpp
